--- a/index.html
+++ b/index.html
@@ -3,9 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rsultados</title>
+    <title>Resultados</title>
 </head>
 <body>
-    
+    <main>
+        <section class="resultados">
+         <h1>Seu resultado</h1>
+
+         <div>
+            <strong>76</strong>
+            <strong>de 100</strong>
+
+         </div>
+
+         <h2>Ótimo</h2>
+         <p>Sua performance superou a de 65% das pessoas que realizaram o teste aqui!</p>
+        </section>
+
+        <section class="resumo">
+          <h2>Resumo</h2>
+
+          <div>
+            <div>
+            <img src="./images/icon-reaction.svg" alt="ícone de reação">
+            <span>Reação</span>
+           </div>
+
+            <strong>80 / 100</strong>
+        </div>
+        <section class="resumo">
+            <div>
+            <div>
+            <img src="./images/icon-memory.svg" alt="ícone de memória">
+            <span>Memória</span>
+           </div>
+
+            <strong>92 / 100</strong>
+        </div>
+        <section class="resumo">
+            <div>
+            <div>
+            <img src="./images/icon-verbal.svg" alt="ícone de verbal">
+            <span>Verbal</span>
+           </div>
+
+            <strong>61 / 100</strong>
+        </div>
+        </section>
+        <section class="resumo">
+            <div>
+            <div>
+            <img src="./images/icon-visual.svg" alt="ícone de visual">
+            <span>Visual</span>
+           </div>
+
+            <strong>73</strong> / 100</strong>
+        </div>
+        <button>Continuar</button>
+        </section>
+    </main>
 </body>
 </html>
