--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <section class="resumo">
           <h2>Resumo</h2>
 
-          <div>
+          <div class="resumo_reacao">
             <div>
             <img src="./images/icon-reaction.svg" alt="ícone de reação">
             <span>Reação</span>
@@ -35,8 +35,7 @@
 
             <strong>80 / 100</strong>
         </div>
-        <section class="resumo">
-            <div>
+        <div class="resumo_memoria">
             <div>
             <img src="./images/icon-memory.svg" alt="ícone de memória">
             <span>Memória</span>
@@ -44,8 +43,7 @@
 
             <strong>92 / 100</strong>
         </div>
-        <section class="resumo">
-            <div>
+            <div class="resumo_verbal">
             <div>
             <img src="./images/icon-verbal.svg" alt="ícone de verbal">
             <span>Verbal</span>
@@ -53,15 +51,13 @@
 
             <strong>61 / 100</strong>
         </div>
-        </section>
-        <section class="resumo">
-            <div>
+           <div class="resumo_visual">
             <div>
             <img src="./images/icon-visual.svg" alt="ícone de visual">
             <span>Visual</span>
            </div>
 
-            <strong>73</strong> / 100</strong>
+            <strong>73 / 100</strong>
         </div>
         <button>Continuar</button>
         </section>
